Fix an issue where elements stuck at the top of the page would cause a sudden page-jump on scroll down

--- a/gh-pages/example/css/stuck.css
+++ b/gh-pages/example/css/stuck.css
@@ -9,13 +9,13 @@ body {
   height: 140px;
 }
 
-.light-blue, .dark-blue, .brown, .red, .yellow, .green, .spacer{
+.light-blue, .dark-blue, .brown, .black, .red, .yellow, .green, .spacer{
   width: 100%;
   font-size: 40px;
   text-align: center;
 }
 
-.light-blue, .dark-blue, .red, .green, .brown, .gray {
+.light-blue, .dark-blue, .red, .green, .brown, .black, .gray {
   color: white;
 }
 
@@ -29,6 +29,12 @@ body {
   background-color: #38618c;
   padding-top: 45px;
   height: 140px;
+}
+
+.black {
+  background-color: #000;
+  padding-top: 5px;
+  height: 45px;
 }
 
 .brown {
